--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>stage-2-module-1-build-tools-maven</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <!--Specifies our modules-->
     <modules>
         <module>utils</module>
         <module>demo</module>
@@ -16,6 +17,7 @@
     <properties>
         <junit.version>5.8.1</junit.version>
     </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -28,6 +30,7 @@
     </dependencyManagement>
     <build>
         <plugins>
+<!--specifies that the source and target version of the Java compiler should be version 8-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -37,6 +40,7 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+<!--maven-surefire-plugin is used to execute unit tests in a Maven project.-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
