--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -4,12 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!--Specifies parent-->
     <parent>
         <artifactId>stage-2-module-1-build-tools-maven</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <!--Specifies name of our jar file: utils-1.3.5.jar-->
     <groupId>com.epam</groupId>
     <artifactId>utils</artifactId>
     <version>1.3.5</version>
